# fieri

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Cargo.toml  LICENSE  README.md  TODO.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: audit.yml  ci.yml  publish.yml  tests.yml
assets/: file_upload_example.jsonl
docs/: client.md  types.md
examples/: chatgpt.rs  generate_image.rs  generate_text.rs  get_models.rs  stream_completion.rs  stream_text.rs
payloads/: file_upload_example.jsonl
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
src/api_resources/: README.md  chat.rs  completion.rs  edit.rs  embedding.rs  file.rs  fine_tune.rs  image.rs  mod.rs  model.rs  moderation.rs
src/types/: mod.rs
