[package]
name = "fieri"
version = "0.6.0"
edition = "2021"
authors = [ "Lachezar Kolev <lachezarkolevgg@gmail.com>" ]
rust-version = "1.66.0"
description = "Unofficial Rust client for OpenAI."
documentation = "https://docs.rs/fieri"
readme = "README.md"
homepage = "https://docs.rs/fieri"
repository = "https://github.com/lbkolev/fieri"
keyword = ["openai", "rest-client"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
tokio = { version = "1.24.1",  features = ["full"]}
reqwest = { version = "0.11.13", features = ["json", "multipart", "stream"]}
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
serde_with = "2.2.0"
serde_derive = "1.0.152"
thiserror = "1.0.38"
derive_builder = "0.12.0"
url = "2.3.1"

[[example]]
name = "get_models"
path = "examples/get_models.rs"

[[example]]
name = "generate_image"
path = "examples/generate_image.rs"

[[example]]
name = "generate_text"
path = "examples/generate_text.rs"

[[example]]
name = "stream_text"
path = "examples/stream_text.rs"
