[package]
name = "fieri"
version = "0.7.0"
edition = "2021"
authors = ["Lachezar Kolev <lachezarkolevgg@gmail.com>"]
rust-version = "1.72.0"
description = "Unofficial OpenAI Rust SDK & CLI integration"
documentation = "https://docs.rs/fieri"
readme = "README.md"
homepage = "https://docs.rs/fieri"
repository = "https://github.com/lbkolev/fieri"
keyword = ["openai", "rest-client"]
categories = ["api-bindings", "sdk", "cli", "repl"]
license = "MIT"

[dependencies]
clap = { version = "4.3.12", features = ["derive", "env", "cargo", "string"], optional = true }
const-str = "0.5.6"
derive_builder = "0.12.0"
reqwest = { version = "0.11.13", features = ["json", "multipart", "stream"] }
rustyline = { version = "12.0.0", features = ["with-file-history"], optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
serde_with = "2.2.0"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
url = "2.3.1"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "cargo", "git", "gitcl"] }

[features]
binary = ["clap", "rustyline"]

[[bin]]
name = "fieri"
required-features = ["binary"]

[[example]]
name = "get_models"
path = "examples/get_models.rs"

[[example]]
name = "generate_image"
path = "examples/generate_image.rs"

[[example]]
name = "generate_text"
path = "examples/generate_text.rs"

[[example]]
name = "stream_text"
path = "examples/stream_text.rs"

[[example]]
name = "chatgpt"
path = "examples/chatgpt.rs"
